--- a/app.json
+++ b/app.json
@@ -5,8 +5,8 @@
   ],
   "window":{
     "backgroundTextStyle":"light",
-    "navigationBarBackgroundColor": "#fff",
-    "navigationBarTitleText": "WeChat",
-    "navigationBarTextStyle":"black"
+    "navigationBarBackgroundColor": "#f0145a",
+    "navigationBarTitleText": "微商城",
+    "navigationBarTextStyle":"#f0145a"
   }
 }
